--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -1413,6 +1413,7 @@
 }
 
 .item-section {
+  margin-bottom: 96px;
   &__wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -1434,8 +1435,9 @@
   &__content-img {
     width: 100%;
     height: 577px;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
+    margin-bottom: 64px;
   }
 
   &__text-content {
@@ -1542,13 +1544,22 @@
     letter-spacing: -0.48px;
   }
 
-  &__info-item {
-    margin-bottom: 24px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: start;
-    gap: 12px;
+  &__info {
+    &-list {
+      margin-bottom: 24px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+      gap: 24px;
+    }
+    &-item {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+      gap: 12px;
+    }
   }
 
   &__info-item-heading {
@@ -1580,6 +1591,7 @@
     line-height: normal;
     letter-spacing: -0.36px;
     transition: $defTransitionTime;
+    cursor: pointer;
     &:hover {
       border-color: $brandColor;
     }
@@ -1823,6 +1835,7 @@
       &-img {
         max-width: 400px;
         height: auto;
+        margin-bottom: 64px;
       }
     }
   }
