--- a/styles/index.css
+++ b/styles/index.css
@@ -1727,6 +1727,9 @@ body.no-scroll {
   margin-left: 296px;
 }
 
+.item-section {
+  margin-bottom: 96px;
+}
 .item-section__wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -1746,10 +1749,11 @@ body.no-scroll {
 .item-section__content-img {
   width: 100%;
   height: 577px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
   -o-object-position: center;
      object-position: center;
+  margin-bottom: 64px;
 }
 .item-section__text-content h2 {
   margin-top: 64px;
@@ -1849,8 +1853,15 @@ body.no-scroll {
   line-height: normal;
   letter-spacing: -0.48px;
 }
-.item-section__info-item {
+.item-section__info-list {
   margin-bottom: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: start;
+  gap: 24px;
+}
+.item-section__info-item {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -1884,6 +1895,7 @@ body.no-scroll {
   line-height: normal;
   letter-spacing: -0.36px;
   transition: 0.43s;
+  cursor: pointer;
 }
 .item-section__info-item-list-link:hover {
   border-color: #ff7707;
@@ -2081,6 +2093,7 @@ body.no-scroll {
   .item-section__content-img {
     max-width: 400px;
     height: auto;
+    margin-bottom: 64px;
   }
   .item-section__text-content h2 {
     margin-top: 48px;
