--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -1085,6 +1085,17 @@
       line-height: 95%; /* 38px */
       letter-spacing: -0.8px;
     }
+    h3 {
+      margin-top: 36px;
+      margin-bottom: 24px;
+      color: $gray;
+      font-family: $;
+      font-size: 28px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 95%; /* 38px */
+      letter-spacing: -0.8px;
+    }
     p {
       margin-bottom: 16px;
       span,
