--- a/styles/index.css
+++ b/styles/index.css
@@ -227,6 +227,9 @@ button {
   color: #fff;
   background-color: #ff7707;
 }
+*:focus {
+  outline: none;
+}
 
 body {
   position: relative;
@@ -1413,6 +1416,16 @@ body.no-scroll {
   color: #111;
   font-family: "Suisse Intl", sans-serif;
   font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 95%; /* 38px */
+  letter-spacing: -0.8px;
+}
+.article-section__text-content h3 {
+  margin-top: 36px;
+  margin-bottom: 24px;
+  color: #999;
+  font-size: 28px;
   font-style: normal;
   font-weight: 400;
   line-height: 95%; /* 38px */
