--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -941,6 +941,12 @@
     width: 100%;
     height: 92px;
     margin-bottom: 72px;
+    display: flex;
+    align-items: end;
+    gap: 32px;
+    overflow-x: auto;
+
+    overflow-y: hidden;
   }
 
   &__swiper-slide {
@@ -1089,7 +1095,7 @@
       margin-top: 36px;
       margin-bottom: 24px;
       color: $gray;
-      font-family: $;
+      font-family: $mainFont;
       font-size: 28px;
       font-style: normal;
       font-weight: 400;
