--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -65,16 +65,6 @@
     margin-top: auto;
   }
 }
-.btn {
-  &_icon {
-  }
-
-  &__icon {
-  }
-
-  &__caption {
-  }
-}
 
 .promo-section {
   &__wrapper {
@@ -88,6 +78,44 @@
     max-width: 325px;
     font-size: 22px;
   }
+}
+
+.video-section {
+  width: 100%;
+  position: sticky;
+  left: 0;
+  top: 96px;
+  z-index: -1;
+  &__video-wrapper {
+    position: relative;
+    z-index: 1;
+    &::after {
+      content: '';
+      width: 556px;
+      height: 554.25px;
+      position: absolute;
+      background-image: url('../assets/img/player-lines.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      z-index: 2;
+      left: 0;
+      bottom: 0;
+    }
+    &::before {
+      content: '';
+      width: 351.11px;
+      height: 350px;
+      position: absolute;
+      background-image: url('../assets/img/player-lines-2.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      z-index: 2;
+      right: 0;
+      top: 0;
+    }
+  }
 
   &__video {
     width: 100%;
@@ -96,43 +124,17 @@
     object-position: center;
     border-radius: 48px 48px 0px 0px;
     background: $brandColor;
-    &-wrapper {
-      position: relative;
-      z-index: 1;
-      &::after {
-        content: '';
-        width: 556px;
-        height: 554.25px;
-        position: absolute;
-        background-image: url('../assets/img/player-lines.svg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: contain;
-        z-index: 2;
-        left: 0;
-        bottom: 0;
-      }
-      &::before {
-        content: '';
-        width: 351.11px;
-        height: 350px;
-        position: absolute;
-        background-image: url('../assets/img/player-lines-2.svg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: contain;
-        z-index: 2;
-        right: 0;
-        top: 0;
-      }
-    }
   }
 }
 
 .advantages-section {
-  position: relative;
-  top: -81px;
+  // position: relative;
+  position: sticky;
+  left: 0;
+  top: 0;
   border-radius: 48px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
   background: $white;
   z-index: 2;
   padding: 48px 0;
@@ -140,7 +142,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 512px);
+    grid-template-rows: repeat(1, 512px);
     gap: 8px;
   }
 
@@ -313,14 +315,138 @@
   }
 }
 
-.about-section {
-  padding-top: 57px;
+.instruments-section {
+  position: sticky;
+  left: 0;
+  top: 96px;
+  z-index: 14;
+  padding-top: 72px;
+  padding-bottom: 49px;
+  background-image: url('../assets/img/instrument-bg-1.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 48px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  transition: $defTransitionTime;
+  &__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
 
+  &__row {
+    width: 100%;
+    margin-bottom: 32px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 16px;
+  }
+
+  &__text-contet {
+    max-width: 604px;
+    p {
+      color: #fff;
+    }
+  }
+
+  &__swiper {
+    width: 100%;
+    overflow: visible;
+    .swiper-wrapper {
+      transition: linear;
+    }
+  }
+
+  &__swiper-navigation {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-left: auto;
+    margin-bottom: 24px;
+  }
+
+  &__swiper-navigation-btn {
+    cursor: pointer;
+    transition: $defTransitionTime;
+    &:hover {
+      transform: scale(1.05);
+    }
+    &:active {
+      transform: scale(0.95);
+    }
+  }
+
+  &__swiper-slide {
+    width: 100%;
+    max-width: 452px;
+    height: 374px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    padding: 40px 32px;
+    background-color: #fff;
+    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.25);
+    border-radius: 32px;
+    cursor: pointer;
+    transition: $defTransitionTime;
+    z-index: 1;
+    &:hover {
+      transform: scale(1.05);
+      z-index: 10;
+      .instruments-section__swiper-slide-heading {
+        color: $brandColor;
+      }
+    }
+    &:active {
+      transform: scale(0.95);
+    }
+    &.active {
+      .instruments-section__swiper-slide-heading {
+        color: $brandColor;
+      }
+      &:hover {
+        transform: scale(1);
+      }
+    }
+  }
+
+  &__swiper-slide-heading {
+    margin-bottom: 24px;
+    font-size: 32px;
+    letter-spacing: -2%;
+    font-family: $mainFont;
+    color: $black;
+    transition: 0.3s;
+  }
+
+  &__swiper-slide-text {
+    margin-bottom: auto;
+    font-size: 22px;
+    line-height: 31.2px;
+    letter-spacing: -2%;
+  }
+}
+
+.about-section {
+  padding-top: 88px;
   &__wrapper {
     margin-bottom: 128px;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
     gap: 28px;
+  }
+  &__row {
+    width: 100%;
+    margin-bottom: 96px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 16px;
   }
 
   &__text-content {
@@ -333,120 +459,204 @@
     }
   }
 
-  &__overlay {
+  // &__overlay {
+  //   position: relative;
+  //   width: 100%;
+  //   padding: 40px 32px;
+  //   min-height: 900px;
+  //   border-radius: 48px;
+  //   background-color: $brandColor;
+  //   background-image: url('../assets/img/about-bg.png'),
+  //     url('../assets/img/about-lines-1.svg'),
+  //     url('../assets/img/about-lines-2.svg');
+  //   background-size: cover, auto, auto;
+  //   background-repeat: no-repeat;
+  //   background-position: center, left top, bottom right;
+  // }
+
+  // &__overlay-message {
+  //   position: absolute;
+  //   padding-bottom: 204px;
+  //   background-image: url('../assets/img/about-message-line.svg');
+  //   background-repeat: no-repeat;
+  //   background-position: right 75px bottom;
+  //   transition: $defTransitionTime;
+  //   &.active {
+  //     background-image: unset;
+  //   }
+  //   &.hidden {
+  //     opacity: 0;
+  //     visibility: hidden;
+  //   }
+  //   &:hover {
+  //     .about-section__overlay-popup {
+  //       opacity: 1;
+  //       visibility: visible;
+  //     }
+  //   }
+  //   &_first {
+  //     top: 3%;
+  //     left: 14%;
+  //   }
+  //   &_second {
+  //     padding-bottom: 101px;
+  //     right: 26%;
+  //     bottom: 33%;
+  //     background-image: url('../assets/img/about-message-line-2.svg');
+  //     .about-section__overlay-popup {
+  //       top: 47%;
+  //     }
+  //   }
+  // }
+
+  // &__overlay-message-text {
+  //   padding: 20px 24px;
+  //   border-radius: 100px;
+  //   background: rgba(255, 255, 255, 0.4);
+  //   backdrop-filter: blur(32px);
+  //   color: $white;
+  //   font-family: $mainFont;
+  //   font-size: 24px;
+  //   font-style: normal;
+  //   font-weight: 400;
+  //   line-height: normal;
+  //   letter-spacing: -0.48px;
+  // }
+  // &__overlay-popup {
+  //   position: absolute;
+  //   left: 0;
+  //   right: 0;
+  //   top: 28%;
+  //   margin: 0 auto;
+  //   width: 100%;
+  //   max-width: 310px;
+  //   height: fit-content;
+  //   padding: 24px 16px;
+  //   border-radius: 24px;
+  //   border: 1px solid #ebebeb;
+  //   background: $white;
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: flex-start;
+  //   gap: 24px;
+  //   visibility: hidden;
+  //   opacity: 0;
+  //   transition: $defTransitionTime;
+  //   z-index: 10;
+  //   &.active {
+  //     opacity: 1;
+  //     visibility: visible;
+  //   }
+  // }
+
+  // &__overlay-popup-img {
+  //   width: 100%;
+  //   height: 172px;
+  //   object-fit: contain;
+  // }
+
+  // &__overlay-popup-heading {
+  //   color: $black;
+  //   font-family: $mainFont;
+  //   font-size: 16px;
+  //   font-style: normal;
+  //   font-weight: 400;
+  //   line-height: normal;
+  //   letter-spacing: -0.32px;
+  // }
+
+  // &__overlay-popup-btn {
+  //   padding: 14px 24px;
+  //   width: 100%;
+  //   text-align: center;
+  //   color: #fff;
+  //   font-family: $mainFont;
+  //   font-size: 16px;
+  //   font-style: normal;
+  //   font-weight: 400;
+  //   line-height: normal;
+  //   letter-spacing: -0.32px;
+  // }
+
+  &__layout {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 1fr;
+    gap: 8px;
+  }
+
+  &__card {
     position: relative;
     width: 100%;
-    padding: 40px 32px;
-    min-height: 900px;
-    border-radius: 48px;
-    background-color: $brandColor;
-    background-image: url('../assets/img/about-bg.png'),
-      url('../assets/img/about-lines-1.svg'),
-      url('../assets/img/about-lines-2.svg');
-    background-size: cover, auto, auto;
-    background-repeat: no-repeat;
-    background-position: center, left top, bottom right;
-  }
-
-  &__overlay-message {
-    position: absolute;
-    padding-bottom: 204px;
-    background-image: url('../assets/img/about-message-line.svg');
-    background-repeat: no-repeat;
-    background-position: right 75px bottom;
-    transition: $defTransitionTime;
-    &.hidden {
-      opacity: 0;
-      visibility: hidden;
-    }
-    &:hover {
-      .about-section__overlay-popup {
-        opacity: 1;
-        visibility: visible;
-      }
-    }
-    &_first {
-      top: 40px;
-      left: 32px;
-    }
-    &_second {
-      padding-bottom: 101px;
-      right: 315px;
-      bottom: 217px;
-      background-image: url('../assets/img/about-message-line-2.svg');
-    }
-  }
-
-  &__overlay-message-text {
-    padding: 20px 24px;
-    border-radius: 100px;
-    background: rgba(255, 255, 255, 0.4);
-    backdrop-filter: blur(32px);
-    color: $white;
-    font-family: $mainFont;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: -0.48px;
-  }
-  &__overlay-popup {
-    position: absolute;
-    left: 90%;
-    width: 100%;
-    max-width: 310px;
-    height: fit-content;
-    padding: 24px 16px;
-    border-radius: 24px;
-    border: 1px solid #ebebeb;
-    background: $white;
+    height: 400px;
+    border: 1px solid rgba(235, 235, 235, 1);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 24px;
-    visibility: hidden;
-    opacity: 0;
-    transition: $defTransitionTime;
-    z-index: 10;
-    &.active {
-      opacity: 1;
-      visibility: visible;
+    justify-content: space-between;
+    background-image: url('../assets/img/card-bg.svg');
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    border-radius: 24px;
+    &:hover {
+      box-shadow: 0px 4px 40px rgba($color: $black, $alpha: 0.1);
+      .about-section__card-bg {
+        opacity: 1;
+      }
+      .about-section__card-heading {
+        color: $brandColor;
+      }
     }
   }
 
-  &__overlay-popup-img {
+  &__card-img {
+    position: relative;
+    z-index: 2;
     width: 100%;
-    height: 172px;
+    height: 300px;
     object-fit: contain;
+    object-position: center;
   }
 
-  &__overlay-popup-heading {
-    color: $black;
-    font-family: $mainFont;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: -0.32px;
+  &__card-bg {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    top: 40px;
+    margin: auto;
+    opacity: 0;
+    transition: $defTransitionTime;
   }
 
-  &__overlay-popup-btn {
-    padding: 14px 24px;
-    width: 100%;
-    text-align: center;
-    color: #fff;
-    font-family: $mainFont;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: -0.32px;
+  &__card-heading {
+    margin-left: 24px;
+    margin-bottom: 32px;
+    margin-right: 58px;
+    font-size: 18px;
+    letter-spacing: -2%;
+    -webkit-line-clamp: 2; /* Число отображаемых строк */
+    display: -webkit-box; /* Включаем флексбоксы */
+    -webkit-box-orient: vertical; /* Вертикальная ориентация */
+    overflow: hidden;
+    transition: $defTransitionTime;
   }
 }
 
 .owner-section {
   padding-top: 128px;
   padding-bottom: 190px;
+  z-index: 13;
+  &.view {
+    .owner-section__review {
+      background-position: right bottom, left top;
+    }
+    .owner-section__name,
+    .owner-section__who {
+      opacity: 1;
+    }
+  }
   &__wrapper {
     flex-direction: column;
     align-items: center;
@@ -465,7 +675,8 @@
     background-image: url('../assets/img/right-blockquote.svg'),
       url('../assets/img/blockquote-left.svg');
     background-repeat: no-repeat;
-    background-position: right bottom, left top;
+    background-position: right 97px bottom, left 97px top;
+    transition: 1.3s;
   }
 
   &__review-img {
@@ -495,6 +706,8 @@
     font-weight: 400;
     line-height: 95%; /* 30.4px */
     letter-spacing: -1.28px;
+    opacity: 0;
+    transition: 1.3s;
   }
 
   &__who {
@@ -507,6 +720,8 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.4px;
+    opacity: 0;
+    transition: 1.3s;
   }
 }
 
@@ -564,7 +779,8 @@
     background-repeat: no-repeat;
     background-position: left bottom;
     transition: $defTransitionTime;
-    &:hover {
+    &:hover,
+    &.view {
       background-color: $black;
       border: 1px solid $black;
       background-image: none;
@@ -573,6 +789,15 @@
         visibility: hidden;
       }
       .dev-section__list-item-hidden-text {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+    &_no-anim,
+    &_no-anim:hover {
+      background-color: $white;
+      border: none;
+      .dev-section__list-item-heading {
         opacity: 1;
         visibility: visible;
       }
@@ -1743,6 +1968,11 @@
           right: 24%;
           bottom: 36%;
         }
+        &_first {
+          .about-section__overlay-popup {
+            top: 42%;
+          }
+        }
       }
     }
   }
@@ -1881,12 +2111,20 @@
   .mobile-menu {
     display: flex;
   }
+
+  .footer {
+    padding-bottom: 100px;
+  }
   .header {
     padding: 0;
     margin: 0;
-    &__btn,
     &__nav {
       display: none;
+    }
+    &__btn {
+      position: fixed;
+      right: 32px;
+      bottom: 32px;
     }
     &__burger-btn {
       display: block;
@@ -1980,6 +2218,9 @@
       &-message {
         &_second {
           right: unset;
+          .about-section__overlay-popup {
+            top: 40%;
+          }
         }
         &-text {
           font-size: 16px;
@@ -2119,7 +2360,7 @@
       &-popup {
         left: 0;
         right: 0;
-        top: 100px;
+        top: 100px !important;
         margin: 0 auto;
       }
     }
