--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -44,6 +44,10 @@
   border-top: 1px solid rgba($color: $gray, $alpha: 0.2);
   transition: $defTransitionTime;
   display: none;
+  background-image: url('../assets/img/burger-bg.svg');
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 100%;
   &.active {
     transform: translateX(0%);
     opacity: 1;
@@ -1859,6 +1863,14 @@
   }
 }
 
+@media (max-width: 1440px) {
+  .about-section {
+    &__layout {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
 @media (max-width: 1280px) {
   .header {
     margin-bottom: 96px;
@@ -2112,6 +2124,11 @@
   .mobile-menu {
     display: flex;
   }
+  .header {
+    &__wrapper {
+      padding-right: 0;
+    }
+  }
 
   .advantages-section {
     top: 31px;
@@ -2126,6 +2143,11 @@
       }
     }
   }
+  .about-section {
+    &__layout {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
   .header {
     padding: 0;
     margin: 0;
@@ -2136,10 +2158,9 @@
       margin-right: 50px;
     }
     &__btn {
-      // position: fixed;
-      // right: 32px;
-      // bottom: 32px;
-      display: none;
+      position: fixed;
+      right: 32px;
+      bottom: 32px;
     }
 
     &__mobile-btn {
@@ -2350,6 +2371,25 @@
       margin-top: 48px;
     }
   }
+
+  .instruments-section {
+    &__swiper {
+      &-slide {
+        &:hover {
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 860px) {
+  .about-section {
+    &__row {
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+    }
+  }
 }
 
 @media (max-width: 767px) {
@@ -2462,6 +2502,30 @@
       }
     }
   }
+  .instruments-section {
+    &__row {
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+    }
+    &__swiper {
+      &-slide {
+        max-width: 452px;
+        height: 332px;
+        &-heading {
+          font-size: 28px;
+        }
+        &-text {
+          font-size: 20px;
+          line-height: 26px;
+        }
+        &-img {
+          width: 64px;
+          height: 64px;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 675px) {
@@ -2485,6 +2549,16 @@
     }
     &__content-img {
       height: 240px;
+    }
+  }
+
+  .instruments-section {
+    &__swiper {
+      &-slide {
+        max-width: 300px;
+        height: 332px;
+        padding: 24px 16px;
+      }
     }
   }
 }
@@ -2543,6 +2617,11 @@
         font-size: 24px;
         margin-top: 16px;
       }
+    }
+  }
+  .about-section {
+    &__layout {
+      grid-template-columns: 1fr;
     }
   }
 }
