--- a/styles/index.css
+++ b/styles/index.css
@@ -511,6 +511,10 @@ section {
   border-top: 1px solid rgba(153, 153, 153, 0.2);
   transition: 0.43s;
   display: none;
+  background-image: url("../assets/img/burger-bg.svg");
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  background-size: 100%;
 }
 .mobile-menu.active {
   transform: translateX(0%);
@@ -2066,6 +2070,11 @@ section {
   background-size: contain;
 }
 
+@media (max-width: 1440px) {
+  .about-section__layout {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 @media (max-width: 1280px) {
   .header {
     margin-bottom: 96px;
@@ -2259,6 +2268,9 @@ section {
   .mobile-menu {
     display: flex;
   }
+  .header__wrapper {
+    padding-right: 0;
+  }
   .advantages-section {
     top: 31px;
   }
@@ -2267,6 +2279,9 @@ section {
   }
   .instruments-section__swiper-slide-text {
     font-size: 20px;
+  }
+  .about-section__layout {
+    grid-template-columns: repeat(2, 1fr);
   }
   .header {
     padding: 0;
@@ -2279,7 +2294,9 @@ section {
     margin-right: 50px;
   }
   .header__btn {
-    display: none;
+    position: fixed;
+    right: 32px;
+    bottom: 32px;
   }
   .header__mobile-btn {
     display: flex;
@@ -2435,6 +2452,13 @@ section {
     margin-top: 48px;
   }
 }
+@media (max-width: 860px) {
+  .about-section__row {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+}
 @media (max-width: 767px) {
   .promo-section__wrapper {
     flex-direction: column;
@@ -2517,6 +2541,26 @@ section {
   .item-section__content-img {
     max-width: 420px;
   }
+  .instruments-section__row {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .instruments-section__swiper-slide {
+    max-width: 452px;
+    height: 332px;
+  }
+  .instruments-section__swiper-slide-heading {
+    font-size: 28px;
+  }
+  .instruments-section__swiper-slide-text {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  .instruments-section__swiper-slide-img {
+    width: 64px;
+    height: 64px;
+  }
 }
 @media (max-width: 675px) {
   .catalog-section__list {
@@ -2533,6 +2577,11 @@ section {
   }
   .item-section__content-img {
     height: 240px;
+  }
+  .instruments-section__swiper-slide {
+    max-width: 300px;
+    height: 332px;
+    padding: 24px 16px;
   }
 }
 @media (max-width: 625px) {
@@ -2575,6 +2624,9 @@ section {
   .article-section__text-content h2 {
     font-size: 24px;
     margin-top: 16px;
+  }
+  .about-section__layout {
+    grid-template-columns: 1fr;
   }
 }
 @media (max-width: 575px) {
