--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -61,6 +61,9 @@
     gap: 24px;
     &-link {
       font-size: 18px;
+      &_active {
+        color: $brandColor;
+      }
     }
   }
 
@@ -2415,27 +2418,32 @@
     }
   }
   .about-section {
-    &__overlay {
-      min-height: 520px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      &-message {
-        position: static;
-        padding: 0;
-        background: none;
-        margin-right: auto;
-        &:last-child {
-          margin-left: auto;
-          margin-right: 0;
-        }
-      }
-      &-popup {
-        left: 0;
-        right: 0;
-        top: 100px !important;
-        margin: 0 auto;
+    // &__overlay {
+    //   min-height: 520px;
+    //   display: flex;
+    //   flex-direction: column;
+    //   align-items: center;
+    //   justify-content: space-between;
+    //   &-message {
+    //     position: static;
+    //     padding: 0;
+    //     background: none;
+    //     margin-right: auto;
+    //     &:last-child {
+    //       margin-left: auto;
+    //       margin-right: 0;
+    //     }
+    //   }
+    //   &-popup {
+    //     left: 0;
+    //     right: 0;
+    //     top: 100px !important;
+    //     margin: 0 auto;
+    //   }
+    // }
+    &__card {
+      &-heading {
+        font-size: 14px;
       }
     }
   }
